Add formatting toolbar with Lucide icons and table editing features
- Add comprehensive formatting toolbar with text formatting (bold, italic, code)
- Add block structure controls (paragraph, headings H1-H2-H3)
- Add list controls (bullet and ordered lists)
- Add insertion controls (link, image, table)
- Add undo/redo functionality with keyboard shortcuts
- Implement table editing with row/column operations
- Add TableMenu component for table manipulation (add/delete rows/columns, delete table)
- Add LinkEditor component for floating link editing
- Reorder toolbar: block structure before text formatting
- Use Lucide SVG icons (monochromatic) throughout
- Fix table navigation: allow moving to next line after table
- Improve table insertion: prompt for rows and columns
- Ensure paragraph after table for proper navigation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "lucide-svelte": "^0.562.0",
     "marked": "^17.0.1",
     "prosemirror-commands": "^1.7.1",
     "prosemirror-history": "^1.5.0",
@@ -29,6 +30,7 @@
     "prosemirror-schema-basic": "^1.2.4",
     "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.4",
+    "prosemirror-tables": "^1.8.5",
     "prosemirror-view": "^1.41.4"
   }
 }
