--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "lucide-svelte": "^0.562.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-table": "^4.1.1",
     "marked": "^17.0.1",
     "prosemirror-commands": "^1.7.1",
     "prosemirror-history": "^1.5.0",
